JumpScript/tests/baselines/reference/arithmeticOnInvalidTypes.errors.txt
tests/cases/compiler/arithmeticOnInvalidTypes.jump(3,9): error TS2365: Operator '+' cannot be applied to types 'Number' and 'Number'.
tests/cases/compiler/arithmeticOnInvalidTypes.jump(4,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/compiler/arithmeticOnInvalidTypes.jump(4,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/compiler/arithmeticOnInvalidTypes.jump(5,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/compiler/arithmeticOnInvalidTypes.jump(5,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/compiler/arithmeticOnInvalidTypes.jump(6,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/compiler/arithmeticOnInvalidTypes.jump(6,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.


==== tests/cases/compiler/arithmeticOnInvalidTypes.jump (7 errors) ====
    var x: Number;
    var y: Number;
    var z = x + y;
            ~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'Number' and 'Number'.
    var z2 = x - y;
             ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                 ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var z3 = x * y;
             ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                 ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var z4 = x / y;
             ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                 ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.